fix(app): clippy is initialy hidden to avoid flicker on late hide event callback

--- a/src/assets/css/clippy.css
+++ b/src/assets/css/clippy.css
@@ -1,4 +1,5 @@
 .clippy-assistant-container {
+    display: none;
     position: fixed;
     right: 20px;
     bottom: 20px;
